// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharityGrid renders with title prop 1`] = `
<Fragment>
  <CharityGridHeader
    title="Trending"
  />
  <div
    className="grid"
  />
  <Divider />
</Fragment>
`;

exports[`CharityGrid renders without divider 1`] = `
<Fragment>
  <CharityGridHeader />
  <div
    className="grid"
  />
</Fragment>
`;
